<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="mynanodegreeapps">my Nanodegree Apps!</string>

    <string name="nameSpotifyStreamer">SPOTIFY STREAMER</string>
    <string name="nameCapstoneMyOwnApp">CAPSTONE: MY OWN APP</string>
    <string name="nameXyzReader">XYZ READER</string>
    <string name="nameBuildItBigger">BUILD IT BIGGER</string>
    <string name="nameLibraryApp">LIBRARY APP</string>
    <string name="nameScoresApp">SCORES APP</string>
    <string name="msgLaunchSpotifyStreamer">This button will launch the spotify streamer app!</string>
    <string name="msgLaunchScores">This button will launch the scores app!</string>
    <string name="msgLaunchLibrary">This button will launch the library app!</string>
    <string name="msgLaunchBuildIt">This button will launch the build it bigger app!</string>
    <string name="msgLaunchReader">This button will launch the XYZ reader app!</string>
    <string name="msgLaunchCapstone">This button will launch the capstone app!</string>
</resources>
